--- a/.gitignore
+++ b/.gitignore
@@ -64,3 +64,5 @@ node_modules/
 
 # dotenv environment variables file
 .env
+functions/src/serviceAccountKey.json
+functions/lib/serviceAccountKey.json
